# teehr-devcon25-workshop

./: .gitignore  Dockerfile  README.md  pyproject.toml  runTeehr.sh  run_controller.sh
materials/: 01_Getting_Started.md  02_TEEHR_and_NGIAB.md  03_Visualizer.md  readme.md
notebooks/: 01_TEEHR_NGIAB.ipynb  01_TEEHR_Runner.ipynb  02_Explore_TEEHR.ipynb  02_TEEHR_Evaluation.ipynb  02_The_TEEHR_Evaluation.ipynb  03_Additional_TEEHR_Features.ipynb  03_Advanced_Features.ipynb
notebooks/utils/: ngiab_utils.py  teehr_ngiab.py  teehr_utils.py
scripts/: teehr_ngen.py
scripts/notebooks/: 01_Explore_NGIAB_output.ipynb  02_Explore_TEEHR.ipynb
