[tool.poetry]
name = "ngiab-teehr"
version = "0.1.0"
description = ""
authors = ["Sam Lamont <slamont@rti.org>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
teehr = "^0.4.10"
jupyterlab = "^4.4.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
